--- a/story.html
+++ b/story.html
@@ -91,7 +91,7 @@
             </style>
         </head>
         <body>
-            <img src="https://static.wikia.nocookie.net/projectsekai/images/9/9b/25ji_en_logo.png/revision/latest?cb=20211209182952" alt="Nightcord at 25:00" class="center" style="width: 300px">
+            <img src="pics/25ji.png" alt="Nightcord at 25:00" class="center" style="width: 300px">
             <hr>
             <div class="topnav">
                 <a href="Home-Page.html">Home</a>
